fixed spacing error in header at breakpoint 1100px; enlarged footer icons and adjusted to margin-top to 59px

--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -18,6 +18,7 @@
   }
   body header #intro #header-text {
     max-width: 100% !important;
+    width: auto !important;
   }
   body #main-container {
     margin-left: 3.5em !important;
@@ -203,16 +204,16 @@ body footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 70px;
+  margin-top: 59px;
 }
 body footer #footerIcons img {
-  margin-left: 0.5em;
-  margin-right: 0.5em;
-  height: 16px;
-  width: 16px;
+  margin-left: 1.2em;
+  margin-right: 1.2em;
+  height: 24px;
+  width: 24px;
 }
 body footer p {
-  margin: 0;
+  margin: 0.2em 0 0 0;
 }
 
 /*# sourceMappingURL=indexStyle.css.map */
