--- a/sass/indexResponsive.scss
+++ b/sass/indexResponsive.scss
@@ -16,6 +16,7 @@
 
         #header-text {
           max-width: 100% !important;
+          width: auto !important;
         }
       }
     }
